# statful

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  alloc.c  alloc.h  bar.c  bar.h  block.h  block_battery.c  block_common.h  block_cpu.c  block_cpu.h  block_lua.c  block_lua.h  block_memory.c  block_memory.h  block_time.c  block_time.h  block_volume.c  blocks.c  blocks.h  config.c  config.c.bak  config.h  main.c
